--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
     </div>
     <!-- 导入 layui 的JS文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
-
+    <!-- 导入jq -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入 baseAPi.js -->
+    <script src="/assets/js/baseAPI.js"></script>
     <!-- 导入自己的js -->
     <script src="/assets/js/index.js"></script>
 </body>
