--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <div class="userinfo">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-                    <span class="textavar">A</span>
+                    <span class="text-avatar">A</span>
                     <span id="welcome">欢迎***</span>
                 </div>
                 <ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
